--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
     <description>Demo project for Kafka on Spring boot</description>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -49,6 +50,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Lombock -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
